# apple-music-tui

./: CLAUDE.md  README.md  pyproject.toml
apple_music_tui/: app.py  audio_meter.py  config.py  library_cache.py  lyrics.py  main.py  music_client.py  themes.py
apple_music_tui/widgets/: airplay_picker.py  controls.py  lyrics_overlay.py  now_playing.py  playlist_browser.py  status_bar.py  vu_meter.py
tests/: test_audio_meter.py  test_library_cache.py  test_music_client.py
