[tool.poetry]
name = "apple-music-tui"
version = "0.1.23"
description = "A minimal TUI for controlling Apple Music via osascript"
authors = []
readme = "README.md"
packages = [{include = "apple_music_tui"}]

[tool.poetry.scripts]
apple-music-tui = "apple_music_tui.main:main"

[tool.poetry.dependencies]
python = "^3.11"
textual = "^1.0.0"
pydantic-settings = ">=2.0"
pyobjc-core = { version = ">=10.0", markers = "sys_platform == 'darwin'" }
pyobjc-framework-AVFoundation = { version = ">=10.0", markers = "sys_platform == 'darwin'" }
pyobjc-framework-screencapturekit = "^12.1"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0"
pytest-asyncio = ">=0.21"
textual-dev = "^1.8.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
